@startuml
'https://plantuml.com/entity-diagram

entity MotivationForm {
  id: String <<pk>>
  --
  user_id: String
  why: String
  who: String
  goals: String
  preferred_events: String
  time: String
  --
  created_at: DateTime
  updated_at: DateTime
  deleted_at: DateTime
}

entity User {
  id: String <<pk>>
  --
  UCO: Number
  name: String
  email: String
  phone_number: String
  password: String
  role: UserType
  approved: Boolean
  motivated: Boolean
  --
  created_at: DateTime
  updated_at: DateTime
  deleted_at: DateTime
}

enum UserType {
  ambassador
  manager
}

entity Event {
  id: String <<pk>>
  --
  name: String
  date: Date | null
  event_type_id: String
  approved: Boolean
  limit: Number
  --
  created_at: DateTime
  updated_at: DateTime
  deleted_at: DateTime
}

entity EventType {
  id: String <<pk>>
  --
  name: String
  description: String
  instructions: String
  --
  created_at: DateTime
  updated_at: DateTime
  deleted_at: DateTime
}

entity Event_User {
  id: String <<pk>>
  --
  user_id: String <<FK>>
  event_id: String <<FK>>
  approved: Boolean
  substitute: Boolean
  --
  created_at: DateTime
  updated_at: DateTime
}

entity Report {
  id: String <<pk>>
  --
  event_id: String <<FK>>
  number_of_attendees: Number
  approved: Boolean
  notes: String
  ideas: String
  --
  created_at: DateTime
  updated_at: DateTime
  deleted_at: DateTime
}

entity Material_Report {
  id: String <<pk>>
  --
  material_id: String <<FK>>
  report_id: String <<FK>>
  amount: Number
  --
  created_at: DateTime
  updated_at: DateTime
  deleted_at: DateTime
}

entity Material {
  id: String <<pk>>
  --
  name: String
  description: String
  --
  created_at: DateTime
  updated_at: DateTime
  deleted_at: DateTime
}

Report ||-o{ Material_Report
Material_Report }o-|| Material
Event ||---|| Report

User ||-|| MotivationForm
User ||--o{ Event_User
Event ||--o{ Event_User
Event }o--|| EventType

@enduml